@@ -26,7 +26,7 @@ import com.powsybl.commons.PowsyblException;
 /**
  * A utility class to help finding providers using ServiceLoader.
  *
- * @author Jon Harper <jon.harper at rte-france.com>
+ * @author Jon Harper {@literal <jon.harper at rte-france.com>}
  *
  */
 //Don't bother with generics because serviceloader doesn't return them
@@ -74,7 +74,7 @@ public final class ExtensionAdderProviders {
         }
         List<ExtensionAdderProvider> providers = providersForName.stream()
                 .filter(typeFilter)
-                .collect(Collectors.toList());
+                .toList();
 
         if (providers.isEmpty()) {
             LOGGER.error(
